--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
 etl_copy.ipynb
 fraudenv
-creditcard.csv
-creditcard.csv.zip
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+env/
+logs/
+scheduler/
+airflow.db
+.env
+airflow.cfg
+dataset/raw/
+dataset/processed/
+.idea/
+.vscode/
+.DS_Store
+Thumbs.db
+*.log
+*.tmp
+airflow_home/
+airflow_data/
+airflow.db
+
