--- a/.github/workflows/fdp_ci.yaml
+++ b/.github/workflows/fdp_ci.yaml
@@ -29,7 +29,7 @@ jobs:
 
       # 👉 Step 3.5: Make pipeline importable
       - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=$PWD" >> $GITHUB_ENV
+        run: echo "PYTHONPATH=$PWD/scripts" >> $GITHUB_ENV
 
       # Step 4: Run tests
       - name: Run tests
