--- a/.github/workflows/fdp_ci.yaml
+++ b/.github/workflows/fdp_ci.yaml
@@ -48,7 +48,7 @@ jobs:
       # Step 6: Deploy DAGs to S3
       - name: Deploy DAGs to S3
         run: |
-          aws s3 cp ./dags s3://fraud-detection-data-ameer/dags/ --recursive
+          aws s3 cp scripts/fdp_airflow/dags s3://fraud-detection-data-ameer/dags/ --recursive
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
