--- a/.github/workflows/fdp_ci.yaml
+++ b/.github/workflows/fdp_ci.yaml
@@ -45,10 +45,15 @@ jobs:
         run: |
           python -c "from airflow.models import DagBag; DagBag().dagbag_stats"
 
-      # Step 6: Deploy DAGs to S3
+      # Step 6: Ensure S3 bucket exists (optional safeguard)
+      - name: Ensure S3 bucket exists
+        run: |
+          aws s3 mb s3://fdp-output --region us-east-1 || echo "Bucket already exists"
+
+      # Step 7: Deploy DAGs to S3
       - name: Deploy DAGs to S3
         run: |
-          aws s3 cp scripts/fdp_airflow/dags s3://fraud-detection-data-ameer/dags/ --recursive
+          aws s3 cp scripts/fdp_airflow/dags s3://fdp-output/dags/ --recursive
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
